theme-improvements: Fix responsive menus, additional alignment tweaks, add cosmetic effects like picture boxshadow

--- a/web/themes/custom/open_mff/src/scss/modules/_header.scss
+++ b/web/themes/custom/open_mff/src/scss/modules/_header.scss
@@ -74,7 +74,7 @@
   background-color: white;
 
   .nav-global {
-    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 0px solid rgba(255, 255, 255, 0.2);
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
   }
 }
