--- a/web/themes/custom/open_mff/src/scss/modules/_page.scss
+++ b/web/themes/custom/open_mff/src/scss/modules/_page.scss
@@ -15,6 +15,12 @@ body {
 }
 
 main {
+  .funcolumns {
+    margin: 15px;
+  }
+  img {
+    box-shadow: 0px 0px 4px black;
+  }
   margin-top: 0;
 
   // @include media-breakpoint-up(md) {
